# simple-file-sharing

./: .gitignore  CMakeLists.txt
client/: main.c
client/network/: network_connection.c  network_connection.h
client/network/auth/: auth.c  auth.h
client/network/connection/: network_connection.c
server/: main.c
server/network/: network_connection.c  network_connection.h
server/network/authentication/: authentication.c  authentication.h
server/network/connection/: network_connection.c
server/network/manager/: network_manager.c  network_manager.h
server/storage/database_wrapper/auth_token/: auth_token_database.c  auth_token_database.h
server/storage/database_wrapper/user/: user_database.c  user_database.h
server/storage/manager/: storage_manager.c  storage_manager.h
server/utils/: close_thread.c  close_thread.h
utils/: network_communication_delimiter.h  thread_data.h
utils/file_manager/: file_manager.c  file_manager.h
utils/network/: network_connection.c  network_connection.h
utils/tables/: auth_token.h  file.h  user.h  user_file_share_permissions.h
utils/tables/auth_token/: auth_token.c  auth_token.h
utils/tables/user/: user.c  user.h
utils/thread_data/: thread_data.c  thread_data.h
